# Compiler

./: .clang-format  CMakeLists.txt  README.md
antlr/antlr4-runtime/: CTestTestfile.cmake  Makefile  antlr4-generator-config.cmake  antlr4-runtime-config-version.cmake  antlr4-runtime-config.cmake  cmake_install.cmake
antlr/antlr4-runtime/runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: Doxyfile  exp01-antlr.pptx  exp02-ir.pptx
src/: ASTPrinter.cpp  ASTPrinter.h  ArrayTable.cpp  ArrayTable.h  CMakeLists.txt  Diagnostic.cpp  Diagnostic.h  IDTable (copy).h  IDTable.cpp  IDTable.h  IR.cpp  IR.cpp.bck  IR.g4  IR.h  IR.h.bck  IRBuilder.h  IRBuilder.h.bck  SymTable.cpp  SymTable.h  SymbolTable.cpp  SymbolTable.h  SysY.g4  SysY.g4.bck  SysYFormatter.h  SysYIRGenerator.cpp  SysYIRGenerator.cpp.bck  SysYIRGenerator.h  SysYIRGenerator.h.bck  SysYIRGenerator.old.cpp  SysY_old.g4  debug.h  range.h  sysyc.cpp  test  test.cpp
src/.antlr/: SysY.interp  SysYLexer.interp  SysYLexer.java  SysYLexer.tokens  SysYParser.java
src/backend/: CodeGen.cpp  CodeGen.h  RegManager.cpp  RegManager.h  codegen.cpp  codegen.hpp
test/: format-test-old.sy  format-test.sy  funcrparams.sy
